org.lflang.lfc/test/resources/org/lflang/lfc/tests/tabs.lf
target C;

main reactor {
	state foo(1);
	state	bar(1);
}
